--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -71,7 +71,7 @@
                 <!-- small box -->
                 <div class="small-box bg-success">
                     <div class="inner">
-                        <h3>53<sup style="font-size: 20px">%</sup></h3>
+                        <h3>{{thongKe.soLuongKhoa}}<sup style="font-size: 20px"></sup></h3>
 
                         <p>Khoa</p>
                     </div>
@@ -86,9 +86,9 @@
                 <!-- small box -->
                 <div class="small-box bg-warning">
                     <div class="inner">
-                        <h3>44</h3>
+                        <h3>{{thongKe.soLuongBoMon}}</h3>
 
-                        <p>Khoa NG</p>
+                        <p>Bộ Môn Trung Tâm</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
@@ -99,7 +99,7 @@
             <!-- ./col -->
             <div class="col-lg-3 col-6">
                 <!-- small box -->
-                <div class="small-box bg-danger">
+                <!-- <div class="small-box bg-danger">
                     <div class="inner">
                         <h3>65</h3>
 
@@ -110,7 +110,7 @@
                     </div>
                     <a href="#" class="small-box-footer">Chi Tiết <i class="fas fa-arrow-circle-right"></i></a>
 
-                </div>
+                </div> -->
             </div>
             <!-- ./col -->
         </div>
