--- a/src/app/main/khoa/phongkhoa/phongkhoa.component.html
+++ b/src/app/main/khoa/phongkhoa/phongkhoa.component.html
@@ -13,12 +13,10 @@
         </div>
     </div>
     <!-- /.container-fluid -->
-    <div class="nav-search">
-        <p class="pull-right no-margin">
-            <a (click)="showAdd()" class="btn btn-success btn-xs">
-                <i class="fa fa-plus"></i>&nbsp;Thêm mới
-            </a>
-        </p>
+    <div class="col-md-3">
+        <div class="form-group">
+            <button (click)="showAdd()" class="btn btn-primary" style="margin-top: 30px;">Thêm</button>
+        </div>
     </div>
 </section>
 
