--- a/src/app/main/giaovien/giaovien/giaovien.component.html
+++ b/src/app/main/giaovien/giaovien/giaovien.component.html
@@ -193,10 +193,10 @@
             <div class="modal-body">
                 <form #formdata="ngForm" class="form-horizontal utehy-form" (ngSubmit)="save(formdata.value)" *ngIf="doneSetupForm">
                     <div class="modal-body no-padding">
-                        <div class="form-group" style="text-align: center;">
+                        <!-- <div class="form-group" style="text-align: center;">
 
                             <img name="image" class="product-image ng-star-inserted" src="../../../../assets/img/ImgTeacher/{{doneSetupForm.image}}" style="width: 300px; height: auto">
-                        </div>
+                        </div> -->
 
                         <div class="form-group">
                             <div class="col-sm-6" style="float: left;">
