--- a/src/app/main/giaovien/giaovien/giaovien.component.html
+++ b/src/app/main/giaovien/giaovien/giaovien.component.html
@@ -219,7 +219,7 @@
 
 
                         <div class="form-group">
-                            <label class="col-sm-2 control-label no-padding-right"> Kinh nghiệm</label>
+                            <label class="col-sm-2 control-label no-padding-right"> Ghi chú</label>
                             <div class="col-sm-12">
                                 <p-editor name="kinhNghiem" [(ngModel)]="doneSetupForm.kinhNghiem" [style]="{'height':'200px'}"></p-editor>
                             </div>
@@ -251,13 +251,13 @@
                                     <input type="text" name="maBmtt" placeholder="Mã bộ môn   " [(ngModel)]="doneSetupForm.maBmtt" />
                                 </div>
                             </div>
-                            <div class="col-sm-6" style="float: left;">
+                            <!-- <div class="col-sm-6" style="float: left;">
                                 <label class="col-sm-8 control-label no-padding-right"> Mã Ngạch Công Chức(<span
                     style="color: red;">*</span>)</label>
                                 <div class="col-sm-10">
                                     <input type="number" name="maNgach" placeholder="Mã ngạch " [(ngModel)]="doneSetupForm.maNgach" />
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
 
                         <div class="form-group">
@@ -268,13 +268,13 @@
                                     <input type="number" name="maBac" placeholder="Mã bậc " [(ngModel)]="doneSetupForm.maBac" />
                                 </div>
                             </div>
-                            <div class="col-sm-6" style="float: left;">
+                            <!-- <div class="col-sm-6" style="float: left;">
                                 <label class="col-sm-8 control-label no-padding-right"> Mã Trình Độ HV(<span
                     style="color: red;">*</span>)</label>
                                 <div class="col-sm-10">
                                     <input type="number" name="maTdhv" placeholder="Mã trình độ " [(ngModel)]="doneSetupForm.maTdhv" />
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
 
                         <div class="form-group">
@@ -293,10 +293,10 @@
                                     <div *ngIf="f.ngaySinh.errors.required">Ngày Sinh</div>
                                 </div>
                             </div>
-                            <div class="col-sm-5" style="margin-left: 65px;">
+                            <!-- <div class="col-sm-5" style="margin-left: 65px;">
                                 <label class="">Mật Khẩu(<span style="color: red;">*</span>)</label>
                                 <input type="password" name="matKhau" placeholder="******" [(ngModel)]="doneSetupForm.matKhau" />
-                            </div>
+                            </div> -->
                         </div>
 
                         <div class="form-group" style="display: flex">
@@ -316,10 +316,10 @@
                                 <input type="text" name="chucDanh" placeholder=" " [(ngModel)]="doneSetupForm.chucDanh" />
                             </div>
 
-                            <div class="col-sm-5" style="margin-left: 65px;">
+                            <!-- <div class="col-sm-5" style="margin-left: 65px;">
                                 <label class="">Quyền</label>
                                 <input type="number" name="quyen" [(ngModel)]="doneSetupForm.quyen" />
-                            </div>
+                            </div> -->
                         </div>
 
                         <div class="form-group" style="display: flex">
@@ -356,10 +356,10 @@
                                 <input type="text" *ngIf="doneSetupForm.gioiTinh == 1" name="gioiTinh" value="Nữ" />
 
                             </div>
-                            <div class="col-sm-5" style="margin-left: 65px;">
+                            <!-- <div class="col-sm-5" style="margin-left: 65px;">
                                 <label class="">Trạng thái </label>
                                 <input type="number" name="status" min="0" max="3" [(ngModel)]="doneSetupForm.status" />
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="modal-footer">
