--- a/src/app/main/giaovien/bacluong/bacluong.component.html
+++ b/src/app/main/giaovien/bacluong/bacluong.component.html
@@ -159,13 +159,13 @@
                                     <input type="text" name="nhomBac" placeholder=" " [(ngModel)]="doneSetupForm.nhomBac" />
                                 </div>
                             </div>
-                            <div class="col-sm-6" style="float: left;">
+                            <!-- <div class="col-sm-6" style="float: left;">
                                 <label class="col-sm-8 control-label no-padding-right"> Trạng Thái(<span
                                 style="color: red;">*</span>)</label>
                                 <div class="col-sm-10">
                                     <input type="number" name="status" placeholder="" [(ngModel)]="doneSetupForm.status" />
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
 
                     </div>
