--- a/src/app/main/giaovien/hopdonggv/hopdonggv.component.html
+++ b/src/app/main/giaovien/hopdonggv/hopdonggv.component.html
@@ -118,15 +118,15 @@
                         <div class="form-group">
 
                             <div class="col-sm-6" style="float: left;">
-                                <label class="col-sm-8 control-label no-padding-right"> Từ Ngày</label>
+                                <label class="col-sm-8 control-label no-padding-right"> Ngày Nhập</label>
                                 <div class="col-sm-10">
                                     <input type="datetime-local" name="tuNgay" [(ngModel)]="doneSetupForm.tuNgay">
                                     <div *ngIf="submitted && f.tuNgay.errors" class="invalid-feedback">
-                                        <div *ngIf="f.tuNgay.errors.required">Từ Ngày</div>
+                                        <div *ngIf="f.tuNgay.errors.required">Ngày Nhập</div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6" style="float: left;">
+                            <!-- <div class="col-sm-6" style="float: left;">
                                 <label class="col-sm-8 control-label no-padding-right"> Đến Ngày</label>
                                 <div class="col-sm-10">
                                     <input type="datetime-local" name="denNgay" [(ngModel)]="doneSetupForm.denNgay">
@@ -134,11 +134,11 @@
                                         <div *ngIf="f.denNgay.errors.required">Đến Ngày</div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="form-group">
                             <div class="col-sm-6" style="float: left;">
-                                <label class="col-sm-8 control-label no-padding-right"> Giáo Viên(<span style="color: red;">*</span>)</label>
+                                <label class="col-sm-8 control-label no-padding-right"> Cán Bộ GV(<span style="color: red;">*</span>)</label>
                                 <div class="col-sm-10">
                                     <input type="text" name="maCbgv" placeholder="Mã giáo viên" [(ngModel)]="doneSetupForm.maCbgv" />
                                 </div>
@@ -157,13 +157,13 @@
                                     <input type="text" name="ghiChu" placeholder="" [(ngModel)]="doneSetupForm.ghiChu" />
                                 </div>
                             </div>
-                            <div class="col-sm-6" style="float: left;">
+                            <!-- <div class="col-sm-6" style="float: left;">
                                 <label class="col-sm-8 control-label no-padding-right"> Trạng Thái(<span
                             style="color: red;">*</span>)</label>
                                 <div class="col-sm-10">
                                     <input type="number" name="status" placeholder="" [(ngModel)]="doneSetupForm.status" />
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="modal-footer">
