--- a/src/app/main/khoa/bomon/bomon.component.html
+++ b/src/app/main/khoa/bomon/bomon.component.html
@@ -54,7 +54,7 @@
                                 <th style="width: 19%; text-align: center;background: #343a40;color: white; ">Tên Khoa </th>
                                 <th style="width: 22%; text-align: center;background: #343a40;color: white; ">Tên Bộ Môn </th>
                                 <th style="text-align: center;background: #343a40;color: white; "> Địa Chỉ </th>
-                                <th style="width: 10%; text-align: center;background: #343a40;color: white; ">SL Nhân Sự</th>
+                                <!-- <th style="width: 10%; text-align: center;background: #343a40;color: white; ">SL Nhân Sự</th> -->
                                 <th style="width: 150px; text-align: center;background: #343a40;color: white; ">Tác vụ</th>
                             </tr>
                         </ng-template>
@@ -64,7 +64,7 @@
                                 <td field="tenPhongKhoa">{{ item.tenPhongKhoa }}</td>
                                 <td field="tenBmtt">{{ item.tenBmtt }}</td>
                                 <td field="diaChi">{{ item.diaChi }}</td>
-                                <td field="soLuongNhanSu" style="width: 18%; text-align: center;"> {{ item.soLuongNhanSu }} nhân sự</td>
+                                <!-- <td field="soLuongNhanSu" style="width: 18%; text-align: center;"> {{ item.soLuongNhanSu }} nhân sự</td> -->
                                 <td class="action-col">
                                     <div class="btn-group">
                                         <button title="Xem chi tiết" class="btn btn-xs btn-white btn-default" (click)="ChiTiet(item.maBmtt)">
@@ -132,7 +132,7 @@
                             <div class="col-sm-6" style="float: left;">
                                 <label class="col-sm-8 control-label no-padding-right"> Mã phòng khoa(<span style="color: red;">*</span>)</label>
                                 <div class="col-sm-10">
-                                    <select formControlName="maPk" class="form-control" [(ngModel)]="doneSetupForm.maPk" #changeMaPK (change)="ChangePK(changeMaPK.value)">
+                                    <select name="maPk" class="form-control" [(ngModel)]="doneSetupForm.maPk" #changeMaPK (change)="ChangePK(changeMaPK.value)">
                                     <option *ngFor="let mh of dsphongkhoa"  [value]="mh.maPk">{{mh.tenPhongKhoa}}</option>
                                   </select>
                                 </div>
@@ -162,7 +162,7 @@
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-sm-6 " style="float: left; ">
+                            <!-- <div class="col-sm-6 " style="float: left; ">
                                 <label class="col-sm-8 control-label no-padding-right "> Số lượng nhân sự  </label>
                                 <div class="col-sm-10 ">
                                     <input type="number " name="soLuongNhanSu" placeholder="" [(ngModel)]="doneSetupForm.soLuongNhanSu" />
@@ -173,7 +173,7 @@
                                 <div class="col-sm-10 ">
                                     <input type="number " name="phanLoai" placeholder=" " [(ngModel)]="doneSetupForm.phanLoai" />
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="form-group ">
                             <div class="col-sm-6 " style="float: left; ">
