--- a/src/app/main/khoa/phongkhoa/phongkhoa.component.html
+++ b/src/app/main/khoa/phongkhoa/phongkhoa.component.html
@@ -50,7 +50,7 @@
                             <tr>
                                 <th style="width: 60px; text-align: center;background: #343a40;color: white;">STT</th>
                                 <th style="width: 30%; background: #343a40;color: white;">Tên Khoa</th>
-                                <!-- <th style="width: 15%; text-align: center;background: #343a40;color: white;">Nhân Sự </th> -->
+                                <th style="width: 15%; text-align: center;background: #343a40;color: white;">Nhân Sự </th>
                                 <th style="width: 25%; text-align: center;background: #343a40;color: white;">Hotline</th>
                                 <th style="width: 25%; text-align: center;background: #343a40;color: white;">Email</th>
                                 <th style="width: 150px; text-align: center;background: #343a40;color: white;">Tác vụ</th>
@@ -60,7 +60,7 @@
                             <tr>
                                 <td style="width: 60px; text-align: center;">{{ i + 1 }}</td>
                                 <td field="tenPhongKhoa">{{ item.tenPhongKhoa }}</td>
-                                <!-- <td style="text-align: center;" field="soLuongNhanSu">{{ item.soLuongNhanSu }}_nhân sự </td> -->
+                                <td style="text-align: center;" field="soLuongNhanSu"> {{ item.soLuongNhanSu }} nhân sự </td>
                                 <td style="text-align: center;" field="dienThoai">{{ item.dienThoai }}</td>
                                 <td field="email">{{ item.email }}</td>
                                 <td class="action-col">
@@ -161,18 +161,18 @@
                             </div>
                         </div>
                         <div class="form-group ">
-                            <div class="col-sm-6 " style="float: left; ">
+                            <!-- <div class="col-sm-6 " style="float: left; ">
                                 <label class="col-sm-8 control-label no-padding-right "> Số lượng nhân sự  </label>
                                 <div class="col-sm-10 ">
                                     <input type="number " name="soLuongNhanSu" placeholder="" [(ngModel)]="doneSetupForm.soLuongNhanSu" />
                                 </div>
-                            </div>
-                            <div class="col-sm-6 " style="float: left; ">
+                            </div> -->
+                            <!-- <div class="col-sm-6 " style="float: left; ">
                                 <label class="col-sm-8 control-label no-padding-right "> Phân Loại </label>
                                 <div class="col-sm-10 ">
                                     <input type="number " name="phanLoai" placeholder=" " [(ngModel)]="doneSetupForm.phanLoai" />
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="form-group ">
                             <div class="col-sm-6 " style="float: left; ">
