--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -39,14 +39,14 @@
                     <button class="btn btn-primary" style="margin-top: 30px;">Thống Kê</button>
                 </div>
             </div>
-            <div class="col-md-3">
+            <!-- <div class="col-md-3">
                 <div class="form-group">
                     <a routerLink="/">
                         <button class="btn btn-primary" style="margin-top: 30px;">Tra Cứu</button>
                     </a>
 
                 </div>
-            </div>
+            </div> -->
 
         </div>
 
@@ -63,7 +63,7 @@
                     <div class="icon">
                         <i class="ion ion-bag"></i>
                     </div>
-                    <a href="#" class="small-box-footer">Chi Tiết <i class="fas fa-arrow-circle-right"></i></a>
+                    <a href="http://localhost:4200/giaovien/giaovien" class="small-box-footer">Chi Tiết <i class="fas fa-arrow-circle-right"></i></a>
                 </div>
             </div>
             <!-- ./col -->
@@ -78,7 +78,7 @@
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
                     </div>
-                    <a href="#" class="small-box-footer">Chi Tiết <i class="fas fa-arrow-circle-right"></i></a>
+                    <a href="http://localhost:4200/khoa/phongkhoa" class="small-box-footer">Chi Tiết <i class="fas fa-arrow-circle-right"></i></a>
                 </div>
             </div>
             <!-- ./col -->
@@ -93,7 +93,7 @@
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
                     </div>
-                    <a href="#" class="small-box-footer">Chi Tiết <i class="fas fa-arrow-circle-right"></i></a>
+                    <a href="http://localhost:4200/khoa/bomon" class="small-box-footer" style="cursor: pointer;">Chi Tiết <i class="fas fa-arrow-circle-right"></i></a>
                 </div>
             </div>
             <!-- ./col -->
